--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ license = {text = "GPL-3.0"}
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "click (>=8.1.8,<9.0.0)",
+    "openai (>=1.61.1,<2.0.0)"
 ]
 
 
