--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.12"
 dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "click (>=8.1.8,<9.0.0)",
-    "openai (>=1.61.1,<2.0.0)"
+    "openai (>=1.61.1,<2.0.0)",
+    "python-gitlab (>=5.6.0,<6.0.0)"
 ]
 
 
